# newgame-newtweet

./: .gitignore  README.md  all-steampages-data.db  all-steampages-data.db-journal  aug_steam_games.db  augmenter_augsteamgames-oneshot.ipynb  create-ultimate-db.ipynb  create-ultimate-db.py  get-nb-porn-games.ipynb  get_game_details.ipynb  get_tags_steam_page.ipynb  main-csv.ipynb  main.py  main_v10.ipynb  main_v12.ipynb  main_v8.ipynb  main_v9.ipynb  main_vDDG.py  pyproject.toml  requirements.txt  run_update_smdev.sh  simulated_tweets.txt  socialmedia-developer.db  steam_games.db  test-main-stockdata.ipynb  test.ipynb  test2-populate-augdb.ipynb  test_api_bitly.ipynb  test_brave.ipynb  test_main.ipynb  test_main_2.ipynb  test_main_3.ipynb  test_main_v4.ipynb  test_tag_dev.ipynb  timestamp_last_tweet.txt  tweet_previews.txt  tweets_preview.txt  update-smdev-db.ipynb  update-smdev-db.py  update-smdev.py
.github/workflows/: actions.yml  actions2.yml
ipynb_versioning/: main_v11.ipynb  main_v12.ipynb  main_v7.ipynb  test_tag_dev.ipynb
old_versioning/: main_v13.py  main_v6.ipynb  main_v8.ipynb  test-getxlink-steampage-ok.ipynb  test.ipynb  test_main_v4.ipynb  update-smdev-db.ipynb
socialmedia_dev/: socialmedia-developer.db  update-smdev.py
tweet_each_day/: main.py  timestamp_last_tweet.txt
tweet_each_day/old_versioning/: main_v10.ipynb  main_v12.ipynb  main_v14.py  main_v15.py  test_main_3.ipynb  test_main_v5.ipynb  test_prio_solodev.ipynb  (+1 more)
ultimate_db/: add-scrapped-data-to-ultimate.ipynb  create-ultimate-db.ipynb  populate_ultimate.py  test-populate-db.ipynb
