[tool.poetry]
name = "newgame-newtweet"
version = "0.1.0"
description = ""
authors = ["juliebelzanne <belzannejulie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tweepy = "^4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
